# evtx-viewer

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.toml
src-tauri/src/: event.rs  main.rs
